--- a/form- volunteering.html
+++ b/form- volunteering.html
@@ -7,7 +7,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="fonts.css">
    <link rel="stylesheet" href="css/forms.css">
-   <title>Забрать на передержку</title>
+   <title>Волонтерство</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
       <div class="header flex">
          <div class="header__title">
             <h3>
-               Забрать на передержку
+               Волонтерство
             </h3>
          </div>
          <div class="header__close">
@@ -27,26 +27,14 @@
       </div>
       <hr>
       <div class="main">
-         <div class="inform-pets flex">
-            <div class="inform-pets__image">
-
-            </div>
-            <div class="inform-pets__text">
-               <div class="inform-pets__text--block">
-                  <h4>
-                     Моник
-                  </h4>
-               </div>
-               <div class="inform-pets__text--block">
-                  <p>
-                     Мальчик, 7 месяцев
-                  </p>
-               </div>
-            </div>
-         </div>
          <div class="text-data">
+            <div class="text-data__title">
+               <h4>
+                  Заявка
+               </h4>
+            </div>
             <p>
-               Оставьте информацию о себе. Мы позвоним вам и договоримся, когда вы сможете забрать себе питомца.
+               Отправьте нам заявку о том, что готовы помочь. Когда нам будет необходима помощь, мы позвоним вам.
             </p>
          </div>
          <form action="#" method="post">
@@ -67,26 +55,17 @@
                      </p>
                   </div>
                </div>
-
+               <div class="form-help">
+                  <div class="form-help__check">
+                     <input type="radio" name="radio" id="value1" checked class="radio">   <label for="value1">Хочу помогать на постоянной основе (расписание можно подобрать так, как будет вам удобно)</label><br>
+                     <input type="radio" name="radio" id="value2" class="radio"> <label for="value2">Готов помогать иногда. Хочу выбрать удобное для меня время</label>
+                  </div>
+               </div>
                <div class="fields__remarks">
                   <textarea class="form-input" placeholder="Замечания"></textarea>
                </div>
             </div>
 
-            <div class="text-question">
-               <p>
-                  Если у вас есть вопросы, можете позвонить нам: <br>
-                  +375 (33) 6237879 Лена <br>
-                  +375 (29) 7877791 Ольга <br>
-                  +375 (29) 5837015 Рита <br>
-               </p>
-            </div>
-            <div class="text-thanks">
-               <p>
-                  Наши волонтеры будут активно искать будущий дом хвостику, пока вы помогаете нам с передержкой. <br>
-                  Спасибо за помощь!
-               </p>
-            </div>
             <div class="buttons-form flex">
                <div class="outerbutton-yellow ">
                   <div class="innerbutton-yellow animals-buttons__home">
