--- a/form-carhelp.html
+++ b/form-carhelp.html
@@ -7,7 +7,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="fonts.css">
    <link rel="stylesheet" href="css/forms.css">
-   <title>Забрать на передержку</title>
+   <title>Автопомощь</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
       <div class="header flex">
          <div class="header__title">
             <h3>
-               Забрать на передержку
+               Автопомощь
             </h3>
          </div>
          <div class="header__close">
@@ -27,26 +27,15 @@
       </div>
       <hr>
       <div class="main">
-         <div class="inform-pets flex">
-            <div class="inform-pets__image">
-
-            </div>
-            <div class="inform-pets__text">
-               <div class="inform-pets__text--block">
-                  <h4>
-                     Моник
-                  </h4>
-               </div>
-               <div class="inform-pets__text--block">
-                  <p>
-                     Мальчик, 7 месяцев
-                  </p>
-               </div>
-            </div>
-         </div>
          <div class="text-data">
+            <div class="text-data__title">
+               <h4>
+                  Заявка
+               </h4>
+            </div>
             <p>
-               Оставьте информацию о себе. Мы позвоним вам и договоримся, когда вы сможете забрать себе питомца.
+               Отправьте нам заявку о том, что готовы помочь. Когда нам будет необходима помощь в транспортировке, мы
+               позвоним вам.
             </p>
          </div>
          <form action="#" method="post">
@@ -67,26 +56,30 @@
                      </p>
                   </div>
                </div>
-
+               <div class="form-help">
+                  <div class="form-help__title">
+                     <p>
+                        <b>Выберите вид автопомощи</b>
+                     </p>
+                  </div>
+                  <div class="form-help__check">
+                     <input type="checkbox" name="view" id="checkbox" class="checkbox"><label for="checkbox">
+                        Доставка еды, медикаментов и других небольших вещей
+                     </label><br>
+                     <input type="checkbox" name="view" id="checkbox1" class="checkbox">
+                     <label for="checkbox1"> Доставка сена или соломы, строительных материлов для будок и других
+                        крупногабаритных вещей</label><br>
+                     <input type="checkbox" name="view" id="checkbox2" class="checkbox"> <label
+                        for="checkbox2">Транспортировка небольших собак и котов</label><br>
+                     <input type="checkbox" name="view" id="checkbox3" class="checkbox"><label
+                        for="checkbox3">Транспортировка больших собак</label>
+                  </div>
+               </div>
                <div class="fields__remarks">
                   <textarea class="form-input" placeholder="Замечания"></textarea>
                </div>
             </div>
 
-            <div class="text-question">
-               <p>
-                  Если у вас есть вопросы, можете позвонить нам: <br>
-                  +375 (33) 6237879 Лена <br>
-                  +375 (29) 7877791 Ольга <br>
-                  +375 (29) 5837015 Рита <br>
-               </p>
-            </div>
-            <div class="text-thanks">
-               <p>
-                  Наши волонтеры будут активно искать будущий дом хвостику, пока вы помогаете нам с передержкой. <br>
-                  Спасибо за помощь!
-               </p>
-            </div>
             <div class="buttons-form flex">
                <div class="outerbutton-yellow ">
                   <div class="innerbutton-yellow animals-buttons__home">
