--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0 user-scalable=1.0">
    <link rel="stylesheet" href="fonts.css">
    <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="css/forms.css">
    <title>Спаси жизнь</title>
 </head>
 <body>
@@ -33,10 +34,15 @@
          </label>
 
          <ul class="menu__box flex">
+            <li></li>
            <li><a href="#help" class="menu__link">Как помочь</a></li> 
+           <span class="long"></span>
            <li><a href="animals.html" class="menu__link">Подопечные животные</a></li>
-           <li><a href="#about-u" class="menu__link">О нас</a></li>
+           <span class="long"></span> 
+           <li><a href="#about-u" class="menu__link">О нас </a></li>
+           <span class="long"></span>
            <li><a href="#contact" class="menu__link">Контакты</a></li> 
+           <span class="long"></span>
          </ul>
             
          <div class="flex button-logo-menu">
@@ -257,15 +263,15 @@
             <div class="animals-buttons__long">
                <div class="outerbutton-yellow ">
                   <div class="innerbutton-yellow animals-buttons__home">
-                     <button class="button">
-                        <a href="#"><b>Забрать домой</b></a>
+                     <button class="button button-modal-home">
+                        <a><b>Забрать домой</b></a>
                      </button>
                   </div>
                </div>
                <div class="outerbutton-white animals-buttons__overexposure">
                   <div class="innerbutton-white">
-                     <button class="button">
-                        <a href="#"><b>Забрать на передержку</b></a>
+                     <button class="button button-modal-overexposure">
+                        <a><b>Забрать на передержку</b></a>
                      </button>
                   </div>
                </div>
@@ -410,7 +416,7 @@
                </p>
             </div>
             <div class="help-screen-block__link">
-               <a href="#" class="link">Кому и куда передать?</a>
+               <a class="link button-modal-transfer">Кому и куда передать?</a>
             </div>
          </div>
          <div class="help-screen-line line line-block">
@@ -429,8 +435,8 @@
             </div>
             <div class="outerbutton-yellow help-screen-block__button">
                <div class="innerbutton-yellow">
-                  <button class="button">
-                     <a href="#"><b>Оставить заявку</b></a>
+                  <button class="button button-modal-carhelp">
+                     <a><b>Оставить заявку</b></a>
                   </button>
                </div>
                </div>  
@@ -459,8 +465,8 @@
             </div>
             <div class="outerbutton-yellow help-screen-block__button">
                <div class="innerbutton-yellow">
-                  <button class="button">
-                     <a href="#"><b>Оставить заявку</b></a>
+                  <button class="button button-modal-volunteering">
+                     <a><b>Оставить заявку</b></a>
                   </button>
                </div>
                </div>  
@@ -639,5 +645,398 @@
        </p>
     </div>
    </footer>
+ <div class="modal-home modal">
+   <div class="container-form">
+
+      <div class="header flex">
+         <div class="header__title">
+            <h3>
+               Забрать домой
+            </h3>
+         </div>
+         <div class="header__close">
+            <button class="button" id="close-1">
+               <img src="image/close.png" alt="кнопка закрыть">
+            </button>
+         </div>
+      </div>
+      <hr>
+      <div class="main">
+         <div class="inform-pets flex">
+            <div class="inform-pets__image">
+
+            </div>
+            <div class="inform-pets__text">
+               <div class="inform-pets__text--block">
+                  <h4>
+                     Моник
+                  </h4>
+               </div>
+               <div class="inform-pets__text--block">
+                  <p>
+                     Мальчик, 7 месяцев
+                  </p>
+               </div>
+            </div>
+         </div>
+         <div class="text-data">
+            <p>
+               Оставьте информацию о себе. Мы позвоним вам и договоримся, когда вы сможете забрать себе питомца.
+            </p>
+         </div>
+         <form action="#" method="post">
+            <div class="fields">
+               <div class="fields__inform">
+                  <input class="form-input" type="text" name="name" placeholder="Фамилия и имя">
+               </div>
+               <div class="fields__inform">
+                  <input class="form-input" type="tel" name="tel" placeholder="Номер телефона"
+                     pattern=[0-9]{3}[-][0-9]{3}[-][0-9]{2}[-][0-9]{2}
+                     oninvalid="this.setCustomValidity('Введите номер в формате YYY-XXX-XX-XX')" required>
+                  <div class="fields__attention ">
+                     <p class="text-normal">
+                        Обязательное поле для заполнения
+                     </p>
+                     <p class="text-attention">
+                        Вы не ввели номер телефона. Это поле обязательное.
+                     </p>
+                  </div>
+               </div>
+
+               <div class="fields__remarks">
+                  <textarea class="form-input" placeholder="Замечания"></textarea>
+               </div>
+            </div>
+
+            <div class="text-question">
+               <p>
+                  Если у вас есть вопросы, можете позвонить нам: <br>
+                  +375 (33) 6237879 Лена <br>
+                  +375 (29) 7877791 Ольга <br>
+                  +375 (29) 5837015 Рита <br>
+               </p>
+            </div>
+            <div class="buttons-form flex">
+               <div class="outerbutton-yellow ">
+                  <div class="innerbutton-yellow animals-buttons__home">
+                     <button class="button">
+                        <a href="#"><b>Отправить</b></a>
+                     </button>
+                  </div>
+               </div>
+               <div class="outerbutton-white animals-buttons__overexposure">
+                  <div class="innerbutton-white">
+                     <button class="button" disabled>
+                        <a href="#"><b>Отмена</b></a>
+                     </button>
+                  </div>
+               </div>
+            </div>
+         </form>
+      </div>
+
+   </div>
+ </div> 
+ <div class="modal-overexposure modal">
+   <div class="container-form">
+
+      <div class="header flex">
+         <div class="header__title">
+            <h3>
+               Забрать на передержку
+            </h3>
+         </div>
+         <div class="header__close">
+            <button class="button" id="close-2">
+               <img src="image/close.png" alt="кнопка закрыть">
+            </button>
+         </div>
+      </div>
+      <hr>
+      <div class="main">
+         <div class="inform-pets flex">
+            <div class="inform-pets__image">
+
+            </div>
+            <div class="inform-pets__text">
+               <div class="inform-pets__text--block">
+                  <h4>
+                     Моник
+                  </h4>
+               </div>
+               <div class="inform-pets__text--block">
+                  <p>
+                     Мальчик, 7 месяцев
+                  </p>
+               </div>
+            </div>
+         </div>
+         <div class="text-data">
+            <p>
+               Оставьте информацию о себе. Мы позвоним вам и договоримся, когда вы сможете забрать себе питомца.
+            </p>
+         </div>
+         <form action="#" method="post">
+            <div class="fields">
+               <div class="fields__inform">
+                  <input class="form-input" type="text" name="name" placeholder="Фамилия и имя">
+               </div>
+               <div class="fields__inform">
+                  <input class="form-input" type="tel" name="tel" placeholder="Номер телефона"
+                     pattern=[0-9]{3}[-][0-9]{3}[-][0-9]{2}[-][0-9]{2}
+                     oninvalid="this.setCustomValidity('Введите номер в формате YYY-XXX-XX-XX')" required>
+                  <div class="fields__attention ">
+                     <p class="text-normal">
+                        Обязательное поле для заполнения
+                     </p>
+                     <p class="text-attention">
+                        Вы не ввели номер телефона. Это поле обязательное.
+                     </p>
+                  </div>
+               </div>
+
+               <div class="fields__remarks">
+                  <textarea class="form-input" placeholder="Замечания"></textarea>
+               </div>
+            </div>
+
+            <div class="text-question">
+               <p>
+                  Если у вас есть вопросы, можете позвонить нам: <br>
+                  +375 (33) 6237879 Лена <br>
+                  +375 (29) 7877791 Ольга <br>
+                  +375 (29) 5837015 Рита <br>
+               </p>
+            </div>
+            <div class="text-thanks">
+               <p>
+                  Наши волонтеры будут активно искать будущий дом хвостику, пока вы помогаете нам с передержкой. <br>
+                  Спасибо за помощь!
+               </p>
+            </div>
+            <div class="buttons-form flex">
+               <div class="outerbutton-yellow ">
+                  <div class="innerbutton-yellow animals-buttons__home">
+                     <button class="button">
+                        <a href="#"><b>Отправить</b></a>
+                     </button>
+                  </div>
+               </div>
+               <div class="outerbutton-white animals-buttons__overexposure">
+                  <div class="innerbutton-white">
+                     <button class="button" disabled>
+                        <a href="#"><b>Отмена</b></a>
+                     </button>
+                  </div>
+               </div>
+            </div>
+         </form>
+      </div>
+
+   </div>
+</div> 
+<div class="modal-transfer modal">
+   <div class="container-form">
+      <div class="header flex">
+         <div class="header__title">
+            <h3>
+               Кому и куда передать?
+            </h3>
+         </div>
+         <div class="header__close">
+            <button class="button" id="close-3">
+               <img src="image/close.png" alt="кнопка закрыть">
+            </button>
+         </div>
+      </div>
+      <hr>
+      <div class="main">
+         <div class="text-question">
+            <p>
+               Чтобы передать купленные вещи, свяжитесь с нашими волонтерами. Вы сможете договориться о времени и
+               месте встречи.
+               Если доставить сами не сможете - волонтеры вам помогут в доставке.
+            </p>
+         </div>
+         <div class="text-question">
+            <p>
+               <b>+375 (33) 6237879 </b>Лена <br><br>
+               <b>+375 (29) 7877791</b> Ольга <br><br>
+               <b>+375 (29) 5837015</b> Рита <br>
+            </p>
+         </div>
+
+      </div>
+   </div>
+</div>
+<div class="modal-carhelp modal">
+   <div class="container-form">
+
+      <div class="header flex">
+         <div class="header__title">
+            <h3>
+               Автопомощь
+            </h3>
+         </div>
+         <div class="header__close">
+            <button class="button" id="close-4">
+               <img src="image/close.png" alt="кнопка закрыть">
+            </button>
+         </div>
+      </div>
+      <hr>
+      <div class="main">
+         <div class="text-data">
+            <div class="text-data__title">
+               <h4>
+                  Заявка
+               </h4>
+            </div>
+            <p>
+               Отправьте нам заявку о том, что готовы помочь. Когда нам будет необходима помощь в транспортировке, мы
+               позвоним вам.
+            </p>
+         </div>
+         <form action="#" method="post">
+            <div class="fields">
+               <div class="fields__inform">
+                  <input class="form-input" type="text" name="name" placeholder="Фамилия и имя">
+               </div>
+               <div class="fields__inform">
+                  <input class="form-input" type="tel" name="tel" placeholder="Номер телефона"
+                     pattern=[0-9]{3}[-][0-9]{3}[-][0-9]{2}[-][0-9]{2}
+                     oninvalid="this.setCustomValidity('Введите номер в формате YYY-XXX-XX-XX')" required>
+                  <div class="fields__attention ">
+                     <p class="text-normal">
+                        Обязательное поле для заполнения
+                     </p>
+                     <p class="text-attention">
+                        Вы не ввели номер телефона. Это поле обязательное.
+                     </p>
+                  </div>
+               </div>
+               <div class="form-help">
+                  <div class="form-help__title">
+                     <p>
+                        <b>Выберите вид автопомощи</b>
+                     </p>
+                  </div>
+                  <div class="form-help__check">
+                     <input type="checkbox" name="view" id="checkbox" class="checkbox"><label for="checkbox">
+                        Доставка еды, медикаментов и других небольших вещей
+                     </label><br>
+                     <input type="checkbox" name="view" id="checkbox1" class="checkbox">
+                     <label for="checkbox1"> Доставка сена или соломы, строительных материлов для будок и других
+                        крупногабаритных вещей</label><br>
+                     <input type="checkbox" name="view" id="checkbox2" class="checkbox"> <label
+                        for="checkbox2">Транспортировка небольших собак и котов</label><br>
+                     <input type="checkbox" name="view" id="checkbox3" class="checkbox"><label
+                        for="checkbox3">Транспортировка больших собак</label>
+                  </div>
+               </div>
+               <div class="fields__remarks">
+                  <textarea class="form-input" placeholder="Замечания"></textarea>
+               </div>
+            </div>
+
+            <div class="buttons-form flex">
+               <div class="outerbutton-yellow ">
+                  <div class="innerbutton-yellow animals-buttons__home">
+                     <button class="button">
+                        <a href="#"><b>Отправить</b></a>
+                     </button>
+                  </div>
+               </div>
+               <div class="outerbutton-white animals-buttons__overexposure">
+                  <div class="innerbutton-white">
+                     <button class="button" disabled>
+                        <a href="#"><b>Отмена</b></a>
+                     </button>
+                  </div>
+               </div>
+            </div>
+         </form>
+      </div>
+
+   </div>
+</div>
+<div class="modal-volunteering modal">
+   <div class="container-form">
+
+      <div class="header flex">
+         <div class="header__title">
+            <h3>
+               Волонтерство
+            </h3>
+         </div>
+         <div class="header__close">
+            <button class="button" id="close-5">
+               <img src="image/close.png" alt="кнопка закрыть">
+            </button>
+         </div>
+      </div>
+      <hr>
+      <div class="main">
+         <div class="text-data">
+            <div class="text-data__title">
+               <h4>
+                  Заявка
+               </h4>
+            </div>
+            <p>
+               Отправьте нам заявку о том, что готовы помочь. Когда нам будет необходима помощь, мы позвоним вам.
+            </p>
+         </div>
+         <form action="#" method="post">
+            <div class="fields">
+               <div class="fields__inform">
+                  <input class="form-input" type="text" name="name" placeholder="Фамилия и имя">
+               </div>
+               <div class="fields__inform">
+                  <input class="form-input" type="tel" name="tel" placeholder="Номер телефона"
+                     pattern=[0-9]{3}[-][0-9]{3}[-][0-9]{2}[-][0-9]{2}
+                     oninvalid="this.setCustomValidity('Введите номер в формате YYY-XXX-XX-XX')" required>
+                  <div class="fields__attention ">
+                     <p class="text-normal">
+                        Обязательное поле для заполнения
+                     </p>
+                     <p class="text-attention">
+                        Вы не ввели номер телефона. Это поле обязательное.
+                     </p>
+                  </div>
+               </div>
+               <div class="form-help">
+                  <div class="form-help__check">
+                     <input type="radio" name="radio" id="value1" checked class="radio">   <label for="value1">Хочу помогать на постоянной основе (расписание можно подобрать так, как будет вам удобно)</label><br>
+                     <input type="radio" name="radio" id="value2" class="radio"> <label for="value2">Готов помогать иногда. Хочу выбрать удобное для меня время</label>
+                  </div>
+               </div>
+               <div class="fields__remarks">
+                  <textarea class="form-input" placeholder="Замечания"></textarea>
+               </div>
+            </div>
+
+            <div class="buttons-form flex">
+               <div class="outerbutton-yellow ">
+                  <div class="innerbutton-yellow animals-buttons__home">
+                     <button class="button">
+                        <a href="#"><b>Отправить</b></a>
+                     </button>
+                  </div>
+               </div>
+               <div class="outerbutton-white animals-buttons__overexposure">
+                  <div class="innerbutton-white">
+                     <button class="button" disabled>
+                        <a href="#"><b>Отмена</b></a>
+                     </button>
+                  </div>
+               </div>
+            </div>
+         </form>
+      </div>
+
+   </div>
+</div>
+<script src="modal-window.js"></script>
 </body>
 </html>
