deleted unnecessary files

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <h3>Наши подопечные</h3>
          </div>
          <div class="animals-link">
-            <a href="/animals-next.html" class="link">Посмотреть всех (157)</a>
+            <a href="animals.html" class="link">Посмотреть всех (157)</a>
             <img src="image/icon.png" alt="стрелочка">
          </div>
          <div class="animals-cards">
